--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.3",
     "openai": "^4.33.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,7 +22,6 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "react-google-recaptcha": "^3.1.0",
     "typescript": "^5"
   }
 }
